force-app/main/default/objects/Opportunity/fields/Acquittal_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquittal_Due_Date__c</fullName>
    <description>Acquittal Due Date</description>
    <inlineHelpText>Enter the date the Acquittal is to be submitted</inlineHelpText>
    <label>Acquittal Due Date</label>
    <type>Date</type>
</CustomField>