force-app/main/default/objects/Opportunity/fields/Acquittal_Required__c.field-meta.xml
<CustomField>
    <fullName>Acquittal_Required__c</fullName>
    <description>Acquittal Required</description>
    <inlineHelpText>Is an Acquittal Required for this gift? Check the box for YES</inlineHelpText>
    <label>Acquittal Required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>