force-app/main/default/objects/Opportunity/fields/Acquittal_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Acquittal_Submitted_Date__c</fullName>
    <description>Acquittal Submitted Date</description>
    <inlineHelpText>Enter the date the Acquittal was submitted to the Organisation</inlineHelpText>
    <label>Acquittal Submitted Date</label>
    <type>Date</type>
</CustomField>