force-app/main/default/objects/Opportunity/fields/Balance_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Balance_Rollup__c</fullName>
    <formula>Amount - Total_Processed_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance (Rollup)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>