force-app/main/default/objects/Opportunity/fields/Banking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Banking_Reference__c</fullName>
    <label>Banking Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>