force-app/main/default/objects/Opportunity/fields/Bequest_Confirmed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bequest_Confirmed_Start_Date__c</fullName>
    <label>Bequest Confirmed Start Date</label>
    <type>Date</type>
</CustomField>