force-app/main/default/objects/Opportunity/fields/Bequest_Enquirer_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bequest_Enquirer_Start_Date__c</fullName>
    <label>Bequest Enquirer Start Date</label>
    <type>Date</type>
</CustomField>