force-app/main/default/objects/Opportunity/fields/Bequest_Intender_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bequest_Intender_Start_Date__c</fullName>
    <label>Bequest Intender Start Date</label>
    <type>Date</type>
</CustomField>