force-app/main/default/objects/Opportunity/fields/Bequest_Pending_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bequest_Pending_Start_Date__c</fullName>
    <label>Bequest Pending Start Date</label>
    <type>Date</type>
</CustomField>