force-app/main/default/objects/Opportunity/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Branch. This data is taken from the primary campaign source of the opportunity</description>
    <formula>TEXT( Campaign.Branch_Code__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Branch. This data is taken from the primary campaign source of the opportunity</inlineHelpText>
    <label>Branch</label>
    <type>Text</type>
</CustomField>