force-app/main/default/objects/Opportunity/fields/Budgeted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Amount__c</fullName>
    <label>Budgeted Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>