force-app/main/default/objects/Opportunity/fields/Campaign_Financial_Coding__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Financial_Coding__c</fullName>
    <formula>&quot;CC -&quot; + text( Campaign.Cost_Centre__c) + &quot; Branch - &quot;+ text(Campaign.Branch_Code__c) + &quot; AC-&quot; + text( Campaign.Account_No__c )</formula>
    <label>Campaign Financial Coding</label>
    <type>Text</type>
</CustomField>