force-app/main/default/objects/Opportunity/fields/Case_safe_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_safe_Contact_Id__c</fullName>
    <formula>CASESAFEID(npsp__Primary_Contact__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case safe Contact Id</label>
    <type>Text</type>
</CustomField>