force-app/main/default/objects/Opportunity/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>