force-app/main/default/objects/Opportunity/fields/Community_Fundraiser__c.field-meta.xml
<CustomField>
    <fullName>Community_Fundraiser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community Fundraiser</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Community Fundraiser)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>