force-app/main/default/objects/Opportunity/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <description>Cost Centre. This data is taken from the primary campaign source of the opportunity</description>
    <formula>TEXT( Campaign.Cost_Centre__c )</formula>
    <inlineHelpText>Cost Centre. This data is taken from the primary campaign source of the opportunity</inlineHelpText>
    <label>Cost Centre</label>
    <type>Text</type>
</CustomField>