force-app/main/default/objects/Opportunity/fields/CQ_Closed_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>CQ_Closed_Start_Date__c</fullName>
    <label>CQ Closed Start Date</label>
    <type>Date</type>
</CustomField>