force-app/main/default/objects/Opportunity/fields/Cultivation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cultivation_Start_Date__c</fullName>
    <label>Cultivation Start Date</label>
    <type>Date</type>
</CustomField>