force-app/main/default/objects/Opportunity/fields/Current_FY_Donation_Totaal__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Donation_Totaal__c</fullName>
    <label>Current FY Donation Totaal</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>