force-app/main/default/objects/Opportunity/fields/Current_FY_Donaton_Total__c.field-meta.xml
<CustomField>
    <fullName>Current_FY_Donaton_Total__c</fullName>
    <label>Current FY Donaton Total</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>