force-app/main/default/objects/Opportunity/fields/Days_Past_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_Past_Close__c</fullName>
    <formula>Today() -  CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Days until/past close.</inlineHelpText>
    <label>Days Past Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>