force-app/main/default/objects/Opportunity/fields/Declined_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Declined_Start_Date__c</fullName>
    <label>Declined Start Date</label>
    <type>Date</type>
</CustomField>