force-app/main/default/objects/Opportunity/fields/Donation_ID__c.field-meta.xml
<CustomField>
    <fullName>Donation_ID__c</fullName>
    <label>Donation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>