force-app/main/default/objects/Opportunity/fields/Donation_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Donation_Receipt_Number__c</fullName>
    <description>Use this field for donation receipts numbers, it is used in the donation receipt template</description>
    <displayFormat>R-{000000}</displayFormat>
    <label>Donation Receipt Number</label>
    <type>AutoNumber</type>
</CustomField>