force-app/main/default/objects/Opportunity/fields/Estate_Value_Estimated_Net_Worth__c.field-meta.xml
<CustomField>
    <fullName>Estate_Value_Estimated_Net_Worth__c</fullName>
    <inlineHelpText>Total value of an Estate, or net worth of individual or company Value</inlineHelpText>
    <label>Estate Value/Estimated Net Worth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>