force-app/main/default/objects/Opportunity/fields/F2F_Agency_Verified__c.field-meta.xml
<CustomField>
    <fullName>F2F_Agency_Verified__c</fullName>
    <label>F2F Agency Verified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>