force-app/main/default/objects/Opportunity/fields/F2F_Consultant_ID__c.field-meta.xml
<CustomField>
    <fullName>F2F_Consultant_ID__c</fullName>
    <label>F2F Consultant ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>