force-app/main/default/objects/Opportunity/fields/F2F_Serial__c.field-meta.xml
<CustomField>
    <fullName>F2F_Serial__c</fullName>
    <label>F2F Serial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>