force-app/main/default/objects/Opportunity/fields/F2F_Signup_Location__c.field-meta.xml
<CustomField>
    <fullName>F2F_Signup_Location__c</fullName>
    <label>F2F Signup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>