force-app/main/default/objects/Opportunity/fields/Faves_Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Faves_Event_Name__c</fullName>
    <label>Faves Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>