force-app/main/default/objects/Opportunity/fields/Form_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Type__c</fullName>
    <description>DO NOT CHANGE</description>
    <inlineHelpText>This field is used to capture the form type that has been used to create the opportunity from Payment TXN record.</inlineHelpText>
    <label>Form Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>