force-app/main/default/objects/Opportunity/fields/Fund__c.field-meta.xml
<CustomField>
    <fullName>Fund__c</fullName>
    <label>Fund Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>