force-app/main/default/objects/Opportunity/fields/Fund_ID__c.field-meta.xml
<CustomField>
    <fullName>Fund_ID__c</fullName>
    <label>Fund ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>