force-app/main/default/objects/Opportunity/fields/Fundraising_Branch_Code__c.field-meta.xml
<CustomField>
    <fullName>Fundraising_Branch_Code__c</fullName>
    <inlineHelpText>Which team is managing this opportunity through the sales pipeline.</inlineHelpText>
    <label>Fundraising Branch Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HO</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>QLD</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
            <value>
                <fullName>NSW</fullName>
            </value>
            <value>
                <fullName>SYD</fullName>
            </value>
            <value>
                <fullName>TAS</fullName>
            </value>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>WA</fullName>
            </value>
            <value>
                <fullName>NNSW</fullName>
                <isActive>false</isActive>
                <label>NNSW</label>
            </value>
            <value>
                <fullName>SNSW</fullName>
                <isActive>false</isActive>
                <label>SNSW</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>