force-app/main/default/objects/Opportunity/fields/Funraisin_payment_txn_created__c.field-meta.xml
<CustomField>
    <fullName>Funraisin_payment_txn_created__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Captures whether or not the payment has been created on funraisin opportunities</description>
    <label>Funraisin payment txn created</label>
    <type>Checkbox</type>
</CustomField>