force-app/main/default/objects/Opportunity/fields/Gateway_Fee__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Fee__c</fullName>
    <label>C_Gateway Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>