force-app/main/default/objects/Opportunity/fields/Gateway_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Gateway_Transaction_ID__c</fullName>
    <label>Gateway Transaction ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>