force-app/main/default/objects/Opportunity/fields/Gift_Reference__c.field-meta.xml
<CustomField>
    <fullName>Gift_Reference__c</fullName>
    <label>Gift Reference</label>
    <length>200</length>
    <type>Text</type>
</CustomField>