force-app/main/default/objects/Opportunity/fields/GIK_Loaded_to_Nav__c.field-meta.xml
<CustomField>
    <fullName>GIK_Loaded_to_Nav__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to mark in kind gifts as loaded to the finance system. NB In-Kind donations only should have this used.</description>
    <inlineHelpText>Used to mark in kind gifts as loaded to the finance system. NB In-Kind donations only should have this used.</inlineHelpText>
    <label>GIK Loaded to Nav</label>
    <type>Checkbox</type>
</CustomField>