force-app/main/default/objects/Opportunity/fields/GL_Code__c.field-meta.xml
<CustomField>
    <fullName>GL_Code__c</fullName>
    <description>General ledger code. This information comes from the primary campaign source of the donation</description>
    <formula>TEXT(Campaign.Account_No__c)</formula>
    <inlineHelpText>General ledger code. This information comes from the primary campaign source of the donation</inlineHelpText>
    <label>GL Code</label>
    <type>Text</type>
</CustomField>