force-app/main/default/objects/Opportunity/fields/GST_Applies__c.field-meta.xml
<CustomField>
    <fullName>GST_Applies__c</fullName>
    <formula>Campaign.GST_On_Campaign__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST Applies</label>
    <type>Checkbox</type>
</CustomField>