force-app/main/default/objects/Opportunity/fields/Identify_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Identify_Start_Date__c</fullName>
    <label>Identify Start Date</label>
    <type>Date</type>
</CustomField>