force-app/main/default/objects/Opportunity/fields/In_Celebration_Of__c.field-meta.xml
<CustomField>
    <fullName>In_Celebration_Of__c</fullName>
    <label>In Celebration Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>