force-app/main/default/objects/Opportunity/fields/In_Support_Of__c.field-meta.xml
<CustomField>
    <fullName>In_Support_Of__c</fullName>
    <label>In Support Of</label>
    <length>255</length>
    <type>Text</type>
</CustomField>