force-app/main/default/objects/Opportunity/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <displayFormat>{000}</displayFormat>
    <externalId>true</externalId>
    <label>Invoice Number</label>
    <type>AutoNumber</type>
</CustomField>