force-app/main/default/objects/Opportunity/fields/Legacy_Amount_Expected__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Amount_Expected__c</fullName>
    <inlineHelpText>Used for RE Amount Expected Data Conversion</inlineHelpText>
    <label>Legacy Amount Expected</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>