force-app/main/default/objects/Opportunity/fields/Legacy_Amount_Funded__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Amount_Funded__c</fullName>
    <label>Legacy Amount Funded</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>