force-app/main/default/objects/Opportunity/fields/Legacy_Instrument__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Instrument__c</fullName>
    <label>Legacy Instrument</label>
    <length>100</length>
    <type>Text</type>
</CustomField>