force-app/main/default/objects/Opportunity/fields/Legacy_Rating__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Rating__c</fullName>
    <label>Legacy Rating</label>
    <length>100</length>
    <type>Text</type>
</CustomField>