force-app/main/default/objects/Opportunity/fields/Legacy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Reason__c</fullName>
    <label>Legacy Reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>