force-app/main/default/objects/Opportunity/fields/Legacy_Status__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Status__c</fullName>
    <label>Legacy Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>