force-app/main/default/objects/Opportunity/fields/Merchant_Fee__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Fee__c</fullName>
    <label>Merchant Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>