force-app/main/default/objects/Opportunity/fields/Num_uploaded_payments__c.field-meta.xml
<CustomField>
    <fullName>Num_uploaded_payments__c</fullName>
    <description>Counts number of payments uploaded to finance system. Used in validation rules.</description>
    <label>Num uploaded payments</label>
    <summaryFilterItems>
        <field>npe01__OppPayment__c.Loaded_to_Nav__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>npe01__OppPayment__c.npe01__Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>