force-app/main/default/objects/Opportunity/fields/Number_purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_purchased__c</fullName>
    <description>Number of items. Used for things like number of raffle tickets purchased</description>
    <inlineHelpText>Number of items. Used for things like number of raffle tickets purchased</inlineHelpText>
    <label>Number purchased</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>