force-app/main/default/objects/Opportunity/fields/Offline_Gifts_Exported_to_Funraisin__c.field-meta.xml
<CustomField>
    <fullName>Offline_Gifts_Exported_to_Funraisin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Gifts Exported to Funraisin?</label>
    <type>Checkbox</type>
</CustomField>