force-app/main/default/objects/Opportunity/fields/Offline_Gifts_sent_to_EDH__c.field-meta.xml
<CustomField>
    <fullName>Offline_Gifts_sent_to_EDH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offline Gifts sent to EDH?</label>
    <type>Checkbox</type>
</CustomField>