force-app/main/default/objects/Opportunity/fields/Opp_prod_count__c.field-meta.xml
<CustomField>
    <fullName>Opp_prod_count__c</fullName>
    <label>Opp prod count</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>