force-app/main/default/objects/Opportunity/fields/Original_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Net_Amount__c</fullName>
    <label>Original Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>