force-app/main/default/objects/Opportunity/fields/Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Owner_Team__c</fullName>
    <formula>Owner.Division</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Team</label>
    <type>Text</type>
</CustomField>