force-app/main/default/objects/Opportunity/fields/Parent_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_Name__c</fullName>
    <formula>Campaign.Parent.Name</formula>
    <label>Parent Campaign Name</label>
    <type>Text</type>
</CustomField>