force-app/main/default/objects/Opportunity/fields/Parent_of_Parent_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_of_Parent_Campaign_Name__c</fullName>
    <formula>Campaign.Parent.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent of Parent Campaign Name</label>
    <type>Text</type>
</CustomField>