force-app/main/default/objects/Opportunity/fields/Payment_Fee__c.field-meta.xml
<CustomField>
    <fullName>Payment_Fee__c</fullName>
    <label>Payment Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>