force-app/main/default/objects/Opportunity/fields/Payment_Source__c.field-meta.xml
<CustomField>
    <fullName>Payment_Source__c</fullName>
    <label>Payment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>BPay</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Online Payment</fullName>
            </value>
            <value>
                <fullName>Recurring Payment</fullName>
            </value>
            <value>
                <fullName>Shopify</fullName>
            </value>
            <value>
                <fullName>In-Kind Donation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>