force-app/main/default/objects/Opportunity/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>&apos;M&apos; +  npsp__Primary_Contact__r.MobilePhone + &apos; P&apos; +  npsp__Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>