force-app/main/default/objects/Opportunity/fields/Pledge_WriteOff_Amount__c.field-meta.xml
<CustomField>
    <fullName>Pledge_WriteOff_Amount__c</fullName>
    <label>Pledge WriteOff Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>