force-app/main/default/objects/Opportunity/fields/Preferred_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Preferred_First_Name__c</fullName>
    <formula>npsp__Primary_Contact__r.Preferred_First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferred First Name</label>
    <type>Text</type>
</CustomField>