force-app/main/default/objects/Opportunity/fields/Proposal_Supported_By__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Supported_By__c</fullName>
    <label>Proposal Supported By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CQ Contact 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>