force-app/main/default/objects/Opportunity/fields/Segment_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Segment_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Segment Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Segmentation Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>