force-app/main/default/objects/Opportunity/fields/SKU_Shopify__c.field-meta.xml
<CustomField>
    <fullName>SKU_Shopify__c</fullName>
    <description>SKU Field for Shopify Orders through Zapier</description>
    <label>SKU Shopify</label>
    <length>255</length>
    <type>Text</type>
</CustomField>