force-app/main/default/objects/Opportunity/fields/Solicitation_Channel_SS__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Channel_SS__c</fullName>
    <label>Solicitation Channel SS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>