force-app/main/default/objects/Opportunity/fields/Solicitation_Gift_Type_PF__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Gift_Type_PF__c</fullName>
    <label>Solicitation Gift Type PF</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TBC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>