force-app/main/default/objects/Opportunity/fields/Supporter_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Supporter_Page_URL__c</fullName>
    <label>Supporter Page URL</label>
    <type>Url</type>
</CustomField>