force-app/main/default/objects/Opportunity/fields/Team_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Team_Page_URL__c</fullName>
    <label>Team Page URL</label>
    <type>Url</type>
</CustomField>