force-app/main/default/objects/Opportunity/fields/The_Ask_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>The_Ask_Start_Date__c</fullName>
    <label>The Ask Start Date</label>
    <type>Date</type>
</CustomField>