force-app/main/default/objects/Opportunity/fields/Total_GST_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Refunded__c</fullName>
    <label>Total GST Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>