force-app/main/default/objects/Opportunity/fields/Total_Processed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Processed_Payments__c</fullName>
    <label>Total Processed Payments</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>