force-app/main/default/objects/Opportunity/fields/Transaction_Year__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Year__c</fullName>
    <formula>text(year(CloseDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Year</label>
    <type>Text</type>
</CustomField>