force-app/main/default/objects/Opportunity/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to perform/backdate mass updates when process builders are created or changed for eg</description>
    <label>Update</label>
    <type>Checkbox</type>
</CustomField>