force-app/main/default/objects/Opportunity/fields/UTM__c.field-meta.xml
<CustomField>
    <fullName>UTM__c</fullName>
    <description>UTM Medium field
Originates from Funraisin</description>
    <label>UTM Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>