force-app/main/default/objects/Opportunity/fields/UTM_Source__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source__c</fullName>
    <description>UTM Source field
Originates from Funraisin</description>
    <label>UTM Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>